tests/negative/gold/abstract_optional_test.gold
tests/negative/abstract_optional_test.toit:6:20: error: Unresolved identifier: 'unresolved'
  abstract foo x y=unresolved --named1=unresolved --named2=2
                   ^~~~~~~~~~
tests/negative/abstract_optional_test.toit:6:40: error: Unresolved identifier: 'unresolved'
  abstract foo x y=unresolved --named1=unresolved --named2=2
                                       ^~~~~~~~~~
Couldn't find 'main' (with 0 or 1 argument) in entry file 'tests/negative/abstract_optional_test.toit'
Compilation failed.
